manifests/argocd/apps/nextcloud/base/apps/nextcloud-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nextcloud-route
  namespace: nextcloud
  annotations:
    haproxy.router.openshift.io/timeout: 240s  
spec:
  host: cloud.janz.digital
  to:
    kind: Service
    name: nextcloud
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
